Fix service page clutter on mobile phones

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -269,3 +269,10 @@ p.award {
     width: 45%;
     font-family: "Open Sans";
 }
+@media only screen and (max-width : 800px) {
+    #service_left, #service_right {
+        clear: both;
+        float: none;
+        width: 100%;
+    }
+}
